Fri Jun 29 2007  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.13.6 ===

2007-06-18  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.13.5 ===

2007-06-05  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.13.4 ===

2007-06-04  Matthias Clasen  <mclasen@redhat.com>
	
	* === Released 2.13.3 ===

2007-05-22  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.13.2 ===

2007-05-03  Matthias Clasen <mclasen@redhat.com>

	* === Released 2.13.1 ===

2007-03-16  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.13.0 ===

2007-01-19  Tor Lillqvist  <tml@novell.com>

	* Makefile.am (gmodule-2.0.lib): Use $(srcdir) for builds outside
	srcdir.

2006-12-31  Matthias Clasen  <mclasen@redhat.com>

	* gmodule.c: Fix include order for win32. (#390943, 
	Kazuki Iwamoto)

2006-12-28  Matthias Clasen  <mclasen@redhat.com>

	* gmodule.c: Clean up includes.

2006-12-13  Matthias Clasen  <mclasen@redhat.com>

	* gmodule.c (g_module_open):
	* gmodule-dl.c (_g_module_symbol): Handle valid symbols
	that are NULL correctly.  (#385388, Felix Kater)

Mon Sep 11 14:58:56 2006  Tim Janik  <timj@imendio.com>

	* gmodule.c: applied patch from Christian Persch to support
	G_DEBUG flags resident-modules and bind-now-modules, bug #345099.

2006-08-29  Tor Lillqvist  <tml@novell.com>

	Remove support for Windows 9x/ME. GTK+ hasn't worked on Win9x
	since 2.6. It's pointless to keep the Win9x code in here as it
	isn't being maintained anyway. If somebody is interested, it is in
	older GLib versions, and in CVS.

	* gmodule-win32.c (_g_module_open): Remove the Win9x branch of if
	statement.

2006-08-15  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.12.2 ===

2006-07-22  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.12.1 ===

2006-07-02  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.12.0 ===

2006-06-20  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.11.4 ===

2006-06-12  Matthias Clasen  <mclasen@redhat.com>
