@@ -488,7 +488,10 @@ g_module_open (const gchar    *file_name,
 	{
 	  gchar *error;
 
-	  error = g_strconcat ("GModule initialization check failed: ", check_failed, NULL);
+	  error = g_strconcat ("GModule (", 
+                               file_name ? file_name : "NULL", 
+                               ") initialization check failed: ", 
+                               check_failed, NULL);
 	  g_module_close (module);
 	  module = NULL;
 	  g_module_set_error (error);
