@@ -1,3 +1,9 @@
+2007-07-09  Matthias Clasen  <mclasen@redhat.com>
+
+	* gmodule.c (g_module_open): Include the module file 
+	name to the error message given when module initialization 
+	fails.  (#448484, Gustavo Carneiro)
+
 Fri Jun 29 2007  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.13.6 ===
